Adapt to org rename. See angular-redux/ng2-redux#304

--- a/examples/source/index.html
+++ b/examples/source/index.html
@@ -1,7 +1,7 @@
 <!doctype html5>
 <html>
   <head>
-    <title>ng2-redux-form examples</title>
+    <title>@angular-redux/form examples</title>
   </head>
   <body>
     <example></example>
